# demo-multiple-remote-containers

./: .gitignore  LICENSE  README.md  docker-compose.yml
golang/: .devcontainer.json  Dockerfile
python/: .devcontainer.json  Dockerfile  pyproject.toml
python/.config/: flake8
