[tool.poetry]
name = "python-service"
version = "0.1.0"
description = ""
authors = ["fumiyakk <chiba.fumi238@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-watch = "^4.2.0"
pytest-cov = "^2.10.0"
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.780"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''